# codes-simulator

./: CLAUDE.md  README.md  cli.py  gui.py  main.py  pyproject.toml  source_pipeline.py
.streamlit/: config.toml
channel/: __init__.py  base.py  bsc.py
coding/: __init__.py  base.py  hamming.py
compression/: base.py  huffman.py  shannon_fano.py
core/: simulator.py
metrics/: base.py  pipeline_metrics.py
s_compression/: __init__.py  tunstall.py
source/: __init__.py  base.py  bits_reader.py  image_reader.py  text_reader.py
ui/: app.py
