[project]
name = "coding-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "reedsolo>=1.7.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
]
